# Gamenge-ECS

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
cmake/: ECSConfig.cmake.in
source/inc/gamenge/ecs/: component_manager.hpp  ecs.hpp  ecs_common.hpp  entity_manager.hpp  system.hpp  system_manager.hpp
source/src/: component_manager.cpp  ecs.cpp  ecs_common.cpp  entity_manager.cpp  system.cpp  system_manager.cpp
test/: CMakeLists.txt
test/src/: component_manager_test.cpp  ecs_test.cpp  entity_manager_test.cpp  messaging_test.cpp  system_manager_test.cpp
